@@ -199,6 +199,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   limit and still set a query-continue in some cases
 * (bug 17357) Added movesubpages parameter to action=move
 * (bug 17433) Added bot flag to list=watchlist&wlprop=flags output
+* (bug 16740) Added list=protectedtitles
 
 === Languages updated in 1.15 ===
 
